--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <nav></nav>
+    </div>
   </body>
 </html>
