--- a/index.html
+++ b/index.html
@@ -13,7 +13,44 @@
   </head>
   <body>
     <div class="container">
-      <nav></nav>
+      <!-- =================NAVBAR STARTS================ -->
+
+      <nav>
+        <div class="nav-container">
+          <div class="nav-logo">
+            <h3>BEAUTY <span>COSMETIC</span></h3>
+            <p>BE ORIGINAL..BE NATURAL..BE GOOD</p>
+          </div>
+          <div class="nav-items">
+            <ul>
+              <a href="#">SUMMER 2022</a>
+              <a href="#">FEATURED</a>
+              <a href="#">EYES</a>
+              <a href="#">LIPS</a>
+              <a href="#">FACE</a>
+              <a href="#">BODY</a>
+              <a href="#">NAIL ART</a>
+              <a href="#">PALLETE</a>
+            </ul>
+          </div>
+        </div>
+        <div class="nav-bottom">
+          <p>
+            100% FREE SHIPPING!<span> over $100 purchases and</span>
+            PLATINUM<span> membership!</span>
+          </p>
+        </div>
+      </nav>
+
+      <!-- =================NAVBAR ENDS================ -->
+
+      <main>
+        <header>
+          <!-- =================HEADER STARTS================ -->
+        </header>
+
+        <!-- =================HEADER ENDS================ -->
+      </main>
     </div>
   </body>
 </html>
