--- a/index.html
+++ b/index.html
@@ -45,8 +45,23 @@
       <!-- =================NAVBAR ENDS================ -->
 
       <main>
+        <!-- =================HEADER STARTS================ -->
         <header>
-          <!-- =================HEADER STARTS================ -->
+          <div class="header-container">
+            <div class="header-contents">
+              <h5>New</h5>
+              <div class="header-subtext">
+                <h1>COMPLEXION</h1>
+                <h4>RESCUE-CRIMSON LOVE & HATE</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Soluta vel sint unde laborum illo doloremque ipsum.
+                  Reprehenderit voluptatum inventore alias voluptatibus, quas
+                  est, molestias vero error animi, tenetur praesentium libero!
+                </p>
+              </div>
+            </div>
+          </div>
         </header>
 
         <!-- =================HEADER ENDS================ -->
