--- a/index.html
+++ b/index.html
@@ -44,28 +44,158 @@
 
       <!-- =================NAVBAR ENDS================ -->
 
-      <main>
-        <!-- =================HEADER STARTS================ -->
-        <header>
-          <div class="header-container">
-            <div class="header-contents">
-              <h5>New</h5>
-              <div class="header-subtext">
-                <h1>COMPLEXION</h1>
-                <h4>RESCUE-CRIMSON LOVE & HATE</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Soluta vel sint unde laborum illo doloremque ipsum.
-                  Reprehenderit voluptatum inventore alias voluptatibus, quas
-                  est, molestias vero error animi, tenetur praesentium libero!
-                </p>
-              </div>
+      <!-- =================HEADER STARTS================ -->
+      <header>
+        <div class="header-container">
+          <div class="header-contents">
+            <h5>New</h5>
+            <div class="header-subtext">
+              <h1>COMPLEXION</h1>
+              <h4>RESCUE-CRIMSON LOVE & HATE</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                facilis dicta. Fugit, tenetur? Reprehenderit dolores ab,
+                blanditiis explicabo quis temporibus libero totam, hic, alias
+                porro nisi asperiores facere! Excepturi, explicabo!Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Illo, facilis
+                dicta. Fugit, tenetur? Reprehenderit dolores ab, blanditiis
+                explicabo quis.
+              </p>
+            </div>
+
+            <div class="action-button">
+              <a href="#">SHOP NOW</a>
             </div>
           </div>
-        </header>
+        </div>
+      </header>
 
-        <!-- =================HEADER ENDS================ -->
+      <main>
+        <!-- =================PAGE PERFORMANCE STARTS================ -->
+        <div class="page-performance">
+          <div class="page-performance-data">
+            <div class="subscribers">
+              <h2>1.5m</h2>
+              <p>Subscribers</p>
+            </div>
+            <div class="followers">
+              <h2>220k</h2>
+              <p>Followers</p>
+            </div>
+            <div class="likes">
+              <h2>316k</h2>
+              <p>Likes</p>
+            </div>
+          </div>
+        </div>
+        <!-- =================PAGE PERFORMANCE ENDS================ -->
+
+        <!-- =================COLLECTION STARTS================ -->
+
+        <div class="list-of-items">
+          <h2>Collection</h2>
+
+          <table>
+            <thead>
+              <tr>
+                <th>FACE</th>
+                <th>EYES</th>
+                <th>LIPS</th>
+                <th>NAILS</th>
+                <th>NAKED</th>
+                <th>BACKSTAGE</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Primers</td>
+                <td>Eye Primers</td>
+                <td>Lip Primers</td>
+                <td>Lacqures</td>
+                <td>Care High Blemishes</td>
+                <td>Brushes</td>
+              </tr>
+              <tr>
+                <td>Foundation</td>
+                <td>Mascaras</td>
+                <td>Lipsticks</td>
+                <td>Manicure</td>
+                <td>Breat Rollers</td>
+                <td>Eyes</td>
+              </tr>
+              <tr>
+                <td>BB Creams</td>
+                <td>Eye Shadows</td>
+                <td>Lip Gloss</td>
+                <td></td>
+                <td>Backstage Nippers</td>
+                <td>Complexion</td>
+              </tr>
+              <tr>
+                <td>Concealers</td>
+                <td>Eye Liners</td>
+                <td>Lip Liners</td>
+                <td></td>
+                <td>Olive Powers</td>
+                <td>Lips</td>
+              </tr>
+              <tr>
+                <td>Powders</td>
+                <td>Eye Brows</td>
+                <td></td>
+                <td></td>
+                <td>Zincara Masque</td>
+                <td>Nails</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Blush</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Bret Stems</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Spot Ruins</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Angile Cares</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- =================COLLECTION ENDS================ -->
       </main>
+
+      <footer>
+        <!-- =================FOOTER STARTS================ -->
+
+        <div class="footer-container">
+          <div class="footer-content">
+            <h3>BEAUTY <span>COSMETIC</span></h3>
+            <p>&copy 2022, Beauty Cosmetic | Developed by Rukmini Rakshit</p>
+
+            <div class="footer-icons">
+              <a href="#"> <i class="uil uil-facebook"></i></a>
+              <a href="#"><i class="uil uil-instagram-alt"></i></a>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+      <!-- =================FOOTER ENDS================ -->
     </div>
   </body>
 </html>
