--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
           </table>
         </div>
         <!-- =================COLLECTION ENDS================ -->
+
+        <!-- =================NEWSLETTER STARTS================ -->
+
+        <div class="newsletter-container">
+          <div class="newsletter">
+            <h3>Sign Up for Our Newsletter</h3>
+            <form>
+              <input type="email" placeholder="Enter your email here" />
+              <button class="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+        <!-- =================NEWSLETTER ENDS================ -->
       </main>
 
       <footer>
